  DefaultEntityEditModel, minor refactoring
  EntityCriteriaUtil, bugs fixed, methods overloaded with a "Collection values" parameter removed, all other methods now handle a Collection parameter
  EntityCriteriaUtil, bug fixed, ForeignKeyCriteria refactored
0.9.0
  DefaultEntityConnection no longer extends DefaultDatabaseConnection, composition used instead
  DefaultEntityConnection now synchronizes on it's internal connection instead of itself
  DatabaseConnection.Procedure and Function generified to accommodate the above inheritance change
  HostMonitor bug fixed, now removes admin server name prefix before checking if the server is already open
  Sonar run
  LoginPanel, refactored, static methods removed
  Sonar run, magic numbers
  EntityConnectionServer, some refactoring
  Util.resolveTrustStore() renamed to resolveTrustStoreFromClasspath()
  EntityDataUtilTest added
  Unit test coverage improved
  Configuration.REGISTRY_PORT_NUMBER renamed to Configuration.REGISTRY_PORT
  HostMonitor bug fixed, only listed servers named RemoteServer.SERVER_ADMIN_PREFIX + Configuration.SERVER_NAME_PREFIX
  DefaultFilteredComboBoxModel.getAllItems() no longer includes the null value
  EntityUtil.setNull() added
  DefaultEntityModel bug fixed, no longer creates an edit model if the supplied table model contains one
  FilteredComboBoxModel.isSelectionEmpty() added, implemented in DefaultFilteredComboBoxModel, tested
  UiUtil.getDateFromUser() dialog using JCalendar now responds to enter (OK) and escape (Cancel) keys
  UiUtil.runWithProgressBar() refactored and overloaded with a cancelAction, now quits silently on CancelException
  DefaultRemoteEntityConnection now synchronizes on it's internal connection proxy instead of itself
  AbstractRemoteServer, connections synchronization improved
  AbstractRemoteServer, disconnect() reduced synchronization time
  AbstractRemoteServer, connect() getLoginProxy() moved out of synchronized block